# Wheel-of-Life

./: .gitignore  MaaSApp.ipynb  README.md  README.pt-br.md  dados.csv  dados2.csv  graf.py  main.py  plotly_in_tkinter.py  pyproject.toml  test2.py  wheel-of-life.ipynb
.ipynb_checkpoints/: wheel-of-life-checkpoint.ipynb
dashapp/: __init__.py  models.py  views.py
dashapp/templates/: criarconta.html  homepage.html  homepage1.html  index.html
instance/: db.sqlite3
